[package]
name = "carbon"
version = "0.1.0"
authors = ["manu <emmanuel.boudreault@polymtl.ca>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
serde_derive = "1.0"

[lib]
name = "carbon"
crate-type = ["cdylib"]

[[bin]]
name = "carbon-ls"
path = "src/ls.rs"

[[bin]]
name = "carbon-server"
path = "src/server.rs"

[[bin]]
name = "carbon-cp"
path = "src/copy.rs"
